# bitcoin_addr

./: .gitignore  Cargo.toml  LICENSE  README.md  check_balance.sh  set_alias.sh  summary.sh  test_summary.sh  view_balance.sh  view_error.sh  view_found.sh
.kilo/plans/: 1782113114395-bitcoin-addresses-db-plan.md
src/: main.rs
