[package]
name = "bitcoin_addr"
version = "0.5.0"
edition = "2024"
authors = ["Marius Bock <marius@mariusb.net>"]

[dependencies]
bitcoin-address-generator = "0.1.0"
bip39 = "2.2.0"
bitcoin = "0.32.6"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
chrono = "0.4.37"
serde_json = "1.0"